--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,3 +18,7 @@ phases:
         commands:
             - echo "we are in the post build phase"
             
+artifacts:
+  files:
+    - '**/*'
+  name: htmlwebappartifact
